[package]
name = "geode"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/makitard/geode-rs"
description = "Rust bindings for the Geode SDK"
license = "BSL-1.0"
documentation = "https://docs.rs/geode"

[dependencies]
windows = { version = ">=0.51.0", features = ["Win32_System_LibraryLoader", "Win32_Foundation"] }